# palo-server

./: CMakeLists.txt  README  palo.ini.sample  requests.txt
.cursor/rules/: deb-package-paloexport.mdc  deb-version-bump.mdc
Modules/CMake/: FindPerftools.cmake
Programs/: PaloOptions.cpp  PaloOptions.h
Programs/paloexport/: README.txt  paloexport_client.cpp  paloexport_client.hpp  paloexport_main.cpp
Programs/paloimport/: paloimport_main.cpp
admin/: README.md  index.html
admin/css/: app.css
admin/js/: api.js  app.js  palo-csv.js
cahiers des charges/: README.md
documentation/: README.md  architecture.md  build-and-run.md  configuration.md  demo-cube-import.json  operations-and-risks.md  packaging.md
packaging/: build-deb.sh
packaging/debian/: control  postinst  prerm
packaging/logrotate/: palo
packaging/systemd/: palo.service
